--- a/configure.ac
+++ b/configure.ac
@@ -40,8 +40,7 @@ m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])
 AC_PROG_LIBTOOL
 
 # Obtain compiler/linker options for depedencies
-PKG_CHECK_MODULES(DRM, libdrm)
-PKG_CHECK_MODULES(DRM_OMAP, libdrm_omap)
+PKG_CHECK_MODULES(DRM, libdrm libdrm_omap)
 PKG_CHECK_MODULES(GBM, gbm)
 PKG_CHECK_MODULES(EGL, egl)
 PKG_CHECK_MODULES(GLES2, glesv2)
