--- a/configure.ac
+++ b/configure.ac
@@ -41,7 +41,7 @@ AC_PROG_LIBTOOL
 
 # Obtain compiler/linker options for depedencies
 PKG_CHECK_MODULES(DRM, libdrm)
-PKG_CHECK_MODULES(GBM, gbm)
+PKG_CHECK_MODULES(GBM, [gbm >= 9.0.0])
 PKG_CHECK_MODULES(EGL, egl)
 PKG_CHECK_MODULES(GLES2, glesv2)
 
